--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <version>1.6.1</version>
         </dependency>
 
+<!--        restTemplate的Patch-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
